# Mobileye_Embedded_Bootcamp

./: .gitignore  CMakeLists.txt  Dockerfile.project  README.md
CVClient/: CMakeLists.txt  GRPCImageWriter.cpp  GRPCImageWriter.h  ICamera.hpp  ImageWriter.hpp  VideoSource.cpp  VideoSource.h  main.cpp
CVClient/Docker/: Dockerfile.wsl
CVClient/Docker/ARM/: Dockerfile.base  Dockerfile.project
CVServer/: CMakeLists.txt  GRPCImageReader.cpp  GRPCImageReader.h  IBackend.hpp  IDB.hpp  ImageReader.hpp  SqlDB.cpp  SqlDB.h  YoloBackend.cpp  main.cpp  yoloBackend.h
CVServer/aws/: Dockerfile.aws  send_image_to_channel.py
OpenCVTest/: CMakeLists.txt  test.cpp
SharedComponents/: Logger.cpp  Logger.h  SafeQueue.cpp  SafeQueue.h  configJson.cpp  configJson.h  structs.h
SharedComponents/grpc/: CVService.proto
